@@ -46,7 +46,7 @@
 <!entity GMimeFilterHTML SYSTEM "sgml/gmime-filter-html.sgml">
 <!entity GMimeFilterMd5 SYSTEM "sgml/gmime-filter-md5.sgml">
 <!entity GMimeFilterStrip SYSTEM "sgml/gmime-filter-strip.sgml">
-<!entity GMimeFilterStrip SYSTEM "sgml/gmime-filter-windows.sgml">
+<!entity GMimeFilterWindows SYSTEM "sgml/gmime-filter-windows.sgml">
 <!entity GMimeFilterYenc SYSTEM "sgml/gmime-filter-yenc.sgml">
 <!entity GMimeCipherContext SYSTEM "sgml/gmime-cipher-context.sgml">
 <!entity GMimeGpgContext SYSTEM "sgml/gmime-gpg-context.sgml">
